@@ -1,8 +1,12 @@
 apod (Astronomy Picture of the Day) Client for #FujiNet
 Change Log
 
+ * 2021-06-04
+   + Split colorbars into a test version of the APOD app,
+     so the main app has a little more breathing room.
+
  * 2021-05-27
-   + WIP - Speak the title of the image.  (Press [V])
+   + Speak the title of the image.  (Press [V])
 
  * 2021-05-05
    + Display of image titles at the bottom while viewing
